Renamed files and improved collision response

--- a/Page.html
+++ b/Page.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Blank Page</title>
+		<title>Game Template</title>
 		<style>
 			body {
 				margin: auto;
@@ -8,30 +8,26 @@
 				position: fixed;
 				overflow: hidden;
 				background-color:black;
-				top: 0px;
-				left: 0px;
-				/*bottom: 0px;
-				right: 0px;*/
 			}
 
 			canvas {
 				margin: auto;
 				display: block;
 				position: fixed;
-				/*padding: 0px;
+				padding: 0px;
 				top: 0px;
-				bottom: 0px;
 				left: 0px;
+
+/*Comment the following two lines if you would like the canvas to be in the top left corner instead of centre.*/
+				bottom: 0px;
 				right: 0px;
-				width: 800px;
-				height: 600px;*/
 			}
 		</style>
 	</head>
 
 	<body onload="init();">
+<!--640x480 is a reasonable resolution. Anything larger will most likely lag extremely hard given this is browser dev.-->
 		<canvas id='canvas' width='640' height='480'></canvas>
-		<!--<canvas id='canvas'></canvas>-->
-		<script src="JavaScript.js"></script>
+		<script src="Game.js"></script>
 	</body>
 </html>
